--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 regex = "1"
+serde = "1.0.163"
+serde_json = "1.0"
 pathfinding = "4.3.0"
 ndarray = "0.15.0"
 ndarray-stats = "0.5.1"
