--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+env_logger = "0.10.0"
+# geo = "0.25.0"
+log = "0.4.0"
+ndarray = "0.15.0"
+ndarray-stats = "0.5.1"
+ordered-float = { version = "3.0", default-features = false }
+pathfinding = "4.3.0"
 regex = "1"
 serde = "1.0.163"
 serde_json = "1.0"
-pathfinding = "4.3.0"
-ndarray = "0.15.0"
-ndarray-stats = "0.5.1"
