--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,16 @@ edition = "2021"
 
 [dependencies]
 env_logger = "0.10.0"
-# geo = "0.25.0"
+indicatif = "0.17.5"
+geo = "0.25.0"
+geo-booleanop = "0.2.1"
 log = "0.4.0"
 ndarray = "0.15.0"
 ndarray-stats = "0.5.1"
 ordered-float = { version = "3.0", default-features = false }
 pathfinding = "4.3.0"
+plotters = "0.3.3"
+# termplot = "0.1.0"
 regex = "1"
 serde = "1.0.163"
 serde_json = "1.0"
