day16, part1, WIP using pathfinding::directed::dijkstra

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 env_logger = "0.10.0"
 indicatif = "0.17.5"
+egui = "0.22.0"
 geo = "0.25.0"
 geo-booleanop = "0.2.1"
 log = "0.4.0"
